<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dip"
        android:layout_marginTop="15dip"
        android:text="@string/help_make_better"
        android:textColor="@color/title_send_feedback"
        android:textSize="20sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standart_margin"
        android:layout_marginEnd="@dimen/standart_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/subject"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:id="@+id/message_input_layout"
        android:layout_marginStart="@dimen/standart_margin"
        android:layout_marginEnd="@dimen/standart_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:hint="@string/message"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/send_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="14dip"
        android:layout_marginBottom="15dip"
        android:background="@drawable/standart_ripple"
        android:text="@string/submit"
        android:textColor="@color/color_accent"/>
</LinearLayout>