<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="194dip"
        android:scaleType="centerCrop"
        android:visibility="gone"/>

    <com.mgrmobi.brandbeat.ui.widget.RatingBrandView
        android:id="@+id/rating_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/about"
        style="@style/MiddleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dip"
        android:layout_marginRight="17dip"
        android:gravity="left"
        android:maxLines="2"
        android:textColor="@color/simple_color"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginEnd="20dip"
        android:layout_marginStart="18dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/compare"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="89"
            android:background="@drawable/button_drawable"
            android:elevation="0dip"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/compare"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/write_review"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dip"
            android:layout_marginStart="25dip"
            android:layout_weight="108"
            android:background="@drawable/text_button_drawable"
            android:elevation="0dip"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:stateListAnimator="@null"
            android:text="@string/write_a_review"
            android:textColor="@color/color_accent"/>

        <Button
            android:id="@+id/follow"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="85"
            android:background="@drawable/text_button_drawable"
            android:elevation="0dip"
            android:lines="1"
            android:paddingBottom="5dip"
            android:stateListAnimator="@null"
            android:text="@string/follow"
            android:textColor="@color/color_accent"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="17dip"
        android:background="@color/delimetr_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="14.5dp"
            android:layout_marginTop="11dip"
            android:text="@string/reviews"
            android:textColor="@android:color/black"
            android:textSize="24dp"/>
        <Button
            android:id="@+id/see_all"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/standart_margin"
            android:background="@drawable/text_button_drawable"
            android:elevation="0dip"
            android:lines="1"
            android:paddingBottom="5dip"
            android:stateListAnimator="@null"
            android:text="@string/see_all"
            android:textColor="@color/color_accent"/>
    </RelativeLayout>
</LinearLayout>